--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+html{
+    scroll-snap-type: y mandatory;
+
+}
+
 .App{
     height: 100vh;
     
@@ -18,6 +23,9 @@
 
     overflow: scroll;
     
+    position: relative;
+
+    scroll-snap-type: y mandatory;
 }
 
 /* Esconde a scrollbar no chrome, safari e opera */
