--- a/src/pages/Video.css
+++ b/src/pages/Video.css
@@ -4,8 +4,15 @@
 
     background-color: aqua;
 
+    position: relative;
+
+    scroll-snap-align: start;
+
 }
 
 .video__player{
+    height: 100%;
+    width: 100%;
 
+    object-fit: fill;
 }
