--- a/src/pages/components/sidebar/videosidebar.css
+++ b/src/pages/components/sidebar/videosidebar.css
@@ -11,3 +11,9 @@
     margin: 0 36px 36px 0;
     text-align: center;
 }
+
+@media only screen and (max-width: 440px){
+    .videoSidebar{
+        top: 40%;
+    }
+}
